apps/nextcloud/resources/euro-office/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: euro-office
  labels:
    app.kubernetes.io/instance: euro-office
    app.kubernetes.io/name: euro-office
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/instance: euro-office
    app.kubernetes.io/name: euro-office
