apps/nextcloud/resources/euro-office/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: euro-office
  namespace: nextcloud
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: euro-office
      app.kubernetes.io/name: euro-office
  ingress:
    - ports:
        - port: 80
          protocol: TCP
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: app
              app.kubernetes.io/instance: nextcloud
              app.kubernetes.io/name: nextcloud
